--- a/app/src/main/res/menu/menu_group_detail.xml
+++ b/app/src/main/res/menu/menu_group_detail.xml
@@ -6,5 +6,13 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        android:visible="false"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_leave_group"
+        android:orderInCategory="200"
+        android:title="@string/group_member_leave_group_title"
+        android:visible="false"
         app:showAsAction="never" />
 </menu>
